--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "babel-jest": "^24.8.0",
     "babel-loader": "8.0.5",
     "babel-plugin-named-asset-import": "^0.3.2",
+    "babel-preset-react-app": "^9.0.0",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
-    "css-loader": "2.1.1",
     "cookie-parser": "~1.4.4",
+    "css-loader": "2.1.1",
     "debug": "~2.6.9",
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
@@ -30,8 +31,8 @@
     "file-loader": "3.0.1",
     "fs-extra": "7.0.1",
     "html-webpack-plugin": "4.0.0-beta.5",
-    "http-proxy-middleware": "^0.19.1",
     "http-errors": "~1.6.3",
+    "http-proxy-middleware": "^0.19.1",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
     "jade": "~1.11.0",
@@ -55,12 +56,14 @@
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
+    "react-swipe": "^6.0.4",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "semver": "6.0.0",
     "style-loader": "0.23.1",
+    "swipe-js-iso": "^2.1.5",
     "terser-webpack-plugin": "1.2.3",
     "ts-pnp": "1.1.2",
     "url-loader": "1.1.2",
@@ -68,8 +71,7 @@
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.0.4",
     "whatwg-fetch": "^3.0.0",
-    "workbox-webpack-plugin": "4.2.0",
-    "babel-preset-react-app": "^9.0.0"
+    "workbox-webpack-plugin": "4.2.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
